--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,3 @@
 spring.mvc.throw-exception-if-no-handler-found=true
 # Disable the default mappings
-# spring.resources.add-mappings=false
-spring.mvc.static-path-pattern=/doc/**
-spring.resources.static-locations=classpath:/resources/static/doc/
+spring.resources.add-mappings=false
