--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
-logging.level.root=WARN
+logging.level.root=DEBUG
 logging.level.org.springframework.web=DEBUG
