--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.mvc.throw-exception-if-no-handler-found=true
-spring.resources.add-mappings=false
+spring.mvc.static-path-pattern=/**
+spring.resources.static-locations=classpath:/resources/static/
 logging.level.root=DEBUG
 logging.level.org.springframework.web=DEBUG
