--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.mvc.throw-exception-if-no-handler-found=true
-spring.mvc.static-path-pattern=/**
-spring.resources.static-locations=classpath:/resources/static/
+spring.resources.add-mappings=false
 logging.level.root=DEBUG
 logging.level.org.springframework.web=DEBUG
