--- a/src/myreactapp/package.json
+++ b/src/myreactapp/package.json
@@ -22,6 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "./assets/",
   "eslintConfig": {
     "extends": [
       "react-app",
